--- a/src/components/MileageFilter/MileageFilter.module.css
+++ b/src/components/MileageFilter/MileageFilter.module.css
@@ -125,7 +125,7 @@
 }
 
 /* ==================== MOBILE до 375px ==================== */
-@media (max-width: 375px) {
+@media screen and (max-width: 375px) {
   .inputs {
     flex-direction: row;
     gap: 8px;
@@ -154,7 +154,8 @@
 }
 
 /* ==================== DESKTOP от 1440px ==================== */
-@media (min-width: 1440px) {
+
+@media screen and (min-width: 1440px) {
   .inputWrapperLeft,
   .inputWrapperRight {
     width: 200px;
