--- a/src/App.module.css
+++ b/src/App.module.css
@@ -44,7 +44,7 @@
 }
 
 /* ==================== MOBILE до 375px ==================== */
-@media (max-width: 375px) {
+@media screen and (max-width: 375px) {
   .navigation {
     padding-left: 16px;
     padding-right: 16px;
@@ -64,7 +64,8 @@
 }
 
 /* ==================== DESKTOP от 1440px ==================== */
-@media (min-width: 1440px) {
+
+@media screen and (min-width: 1440px) {
   .navigation {
     padding-left: 160px;
     padding-right: 160px;
