--- a/src/components/BrandFilter/BrandFilter.module.css
+++ b/src/components/BrandFilter/BrandFilter.module.css
@@ -81,7 +81,7 @@
   color: black;
 }
 /* ==================== MOBILE до 375px ==================== */
-@media (max-width: 375px) {
+@media screen and (max-width: 375px) {
   .control {
     width: 100%;
     font-size: 14px;
