--- a/src/components/CarFilters/CarFilters.module.css
+++ b/src/components/CarFilters/CarFilters.module.css
@@ -53,7 +53,7 @@
 }
 
 /* ==================== MOBILE до 375px ==================== */
-@media (max-width: 375px) {
+@media screen and (max-width: 375px) {
   .filterWraper {
     flex-direction: column;
     align-items: stretch;
@@ -71,7 +71,7 @@
 }
 
 /* ==================== DESKTOP от 1440px ==================== */
-@media (min-width: 1440px) {
+@media screen and (min-width: 1440px) {
   .filterWraper {
     max-width: 1100px;
     gap: 24px;
