--- a/src/page/CatalogCars/CatalogCars.module.css
+++ b/src/page/CatalogCars/CatalogCars.module.css
@@ -77,7 +77,7 @@
 }
 
 /* ==================== MOBILE до 375px ==================== */
-@media (max-width: 375px) {
+@media screen and (max-width: 375px) {
   .catalogContainer {
     padding-top: 40px;
     padding-bottom: 60px;
@@ -99,7 +99,8 @@
 }
 
 /* ==================== DESKTOP от 1440px ==================== */
-@media (min-width: 1440px) {
+
+@media screen and (min-width: 1440px) {
   .catalogContainer {
     padding-top: 84px;
     padding-bottom: 124px;
