--- a/src/page/CarDetails/CarDetails.module.css
+++ b/src/page/CarDetails/CarDetails.module.css
@@ -8,20 +8,21 @@
   margin: 0 auto;
   display: flex;
   gap: 72px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
 
-  padding: 20px;
+  justify-content: space-between;
+
   flex-wrap: wrap;
 }
-.carDetailsLeft,
-.carDetailsRight {
-  flex: 1;
+.carDetailsLeft {
   min-width: 320px;
 }
+.carDetailsRight {
+  /* flex: 1; */
+  min-width: 320px;
+  max-width: 488px;
+}
 .image {
-  /* max-width: 640px; */
+  max-width: 640px;
   width: 100%;
   height: auto;
   height: 512px;
@@ -30,6 +31,7 @@
   object-fit: cover;
 }
 .form {
+  max-width: 640px;
   border: 1px solid var(--gray-light);
   border-radius: 10px;
   padding: 32px;
