--- a/src/components/CarFilters/CarFilters.module.css
+++ b/src/components/CarFilters/CarFilters.module.css
@@ -1,29 +1,3 @@
-/* .filterWraper {
-  max-width: 924px;
-  margin: 0 auto;
-  margin-bottom: 56px;
-  display: flex;
-  gap: 16px;
-  align-items: flex-end;
-}
-.buttonSearch {
-  background: var(--button);
-  border-radius: 12px;
-  padding: 12px 51px;
-  width: 156px;
-  height: 44px;
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 16px;
-  border-color: transparent;
-
-  line-height: 1.25;
-  color: var(--white);
-  transition: background var(--transition);
-}
-.buttonSearch:hover {
-  background: var(--button-hover);
-} */
 .filterWraper {
   max-width: 924px;
   margin: 0 auto;
@@ -44,6 +18,7 @@
   font-size: 16px;
   border-color: transparent;
   line-height: 1.25;
+  border: none;
   color: var(--white);
   transition: background var(--transition);
 }
@@ -67,21 +42,5 @@
     height: 40px;
     font-size: 14px;
     padding: 10px;
-  }
-}
-
-/* ==================== DESKTOP от 1440px ==================== */
-@media screen and (min-width: 1440px) {
-  .filterWraper {
-    max-width: 1100px;
-    gap: 24px;
-    margin-bottom: 64px;
-  }
-
-  .buttonSearch {
-    width: 180px;
-    height: 48px;
-    font-size: 18px;
-    padding: 14px 60px;
   }
 }
