--- a/src/page/CarDetails/CarDetails.module.css
+++ b/src/page/CarDetails/CarDetails.module.css
@@ -131,3 +131,11 @@
   flex-direction: column;
   gap: 16px;
 }
+@media screen and (max-width: 481px) {
+  .carDetails {
+    padding-top: 40px;
+    padding-bottom: 60px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
